# rag-cli-project

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  USER_GUIDE.md  plan.md  pyproject.toml  requirements-web.txt  requirements.txt  start-web.sh  stop-web.sh
backend/: main.py
backend/api/: models.py  routes.py
backend/services/: rag_service.py
config/: dita_chunker.yaml  html_scraper.yaml
desktop/: BUILDING.md  README.md
docs/: SECURITY.md  USER_GUIDE.md  dita_chunker.md  embedding_benchmark_results.md
docs/adr/: 0001-python-version-compatibility.md  0002-embedding-model-upgrade.md  README.md
examples/: sample_queries.txt
examples/documents/: machine_learning.md  python_basics.md  software_architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/scripts/: generate_icons.py
frontend/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  menu.rs  notifications.rs
frontend/src/components/: AboutDialog.css  AboutDialog.jsx  ChatInterface.css  ChatInterface.jsx  DocumentList.css  DocumentList.jsx  DocumentUpload.css  DocumentUpload.jsx  ErrorBoundary.css  ErrorBoundary.jsx  MessageInput.css  MessageInput.jsx  MessageList.css  MessageList.jsx  Notification.css  Notification.jsx  SettingsPanel.css  SettingsPanel.jsx  Sidebar.css  Sidebar.jsx  ThemeToggle.css  ThemeToggle.jsx  WelcomeScreen.css  WelcomeScreen.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/services/: api.js
src/: __init__.py  chunker.py  cli.py  config.py  document_loader.py  embedder.py  exceptions.py  llm_client.py  logger.py  pipeline.py  progress.py  prompts.py  retriever.py  vector_store.py
tests/: __init__.py  test_chunker.py  test_config.py  test_document_loader.py  test_embedder.py  test_exceptions.py  test_html_scraper.py  test_integration.py  test_llm_client.py  test_pipeline.py  test_progress.py  test_prompts.py  test_retriever.py  test_vector_store.py
tests/fixtures/: sample.html  sample.md
tools/: benchmark_embeddings.py  compare_embeddings.py  html_scraper.py  ingest_dita_docs.py  reingest_with_new_embeddings.py
