[package]
name = "rag-assistant"
version = "0.1.0"
description = "RAG Assistant - Local Document Intelligence"
authors = ["Student"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rag_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools", "custom-protocol"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
dirs = "6.0"
portpicker = "0.1"
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Optimize release builds for size
[profile.release]
panic = "abort"       # Strip panic info
codegen-units = 1     # Better optimization
lto = true            # Link-time optimization
opt-level = "s"       # Optimize for size
strip = true          # Strip symbols
